# idash2021

./: .gitignore  Dockerfile  README.md  constants.py  data_preprocess.py  feature_preprocess.py  naive_mash.py  pca_fit_compare.py  pca_save_csv.py  requirements.txt  run_test.sh  run_train.sh  setup.sh  test.py  test2.py  test4.py  test5.py  test_main.py  train.py  train.sh  train_lr.py
archive/: pca_save_npy.py  test3.py  train.py
mash/: hash_speed.py
onehot/: CMakeLists.txt  cols_from_python.txt  test1.cpp
seal/: CMakeLists.txt  run.sh  test1.cpp  test2.cpp
